# GenesisAI

./: .coverage  .env.example  .gitignore  GUARDRAILS.md  README.md  RULES.md  history-save-error-fix-plan.md  mediafilestorageerror-fix-plan.md  prioritized-fixes.md  pyproject.toml  quality_gate.py  run.py  session-completion-bug-fix-plan.md  session-completion-bug-plan.md
.agent/workflows/: 01_rules_and_guardrails.md  08_tabs_to_dropdown.md  11_korean_output_only.md  coding-style.md  concise-planning.md  ui-review.md  using-superpowers.md
.claude/: settings.local.json
.claude/workflows/: 00_project_bootstrap.md  02_baseline_run_and_tests.md  03_crash_bug_fix.md  04_structure_and_quality.md  05_skills_to_workflows.md  06_ui_neobrutalism.md  07_ux_blocking_bugs.md  09_main_layout_sections.md  10_css_edge_case_debug.md  12_quality_gate.md  gcp-storage-patterns.md  lint-and-validate.md  python-testing.md  streamlit-best-practices.md
docs/: ARCHITECTURE.md  OPERATIONS.md
docs/analysis/: pipeline_optimization_proposal.md  structure_analysis.md  x_algorithm_integration_strategy.md
docs/design/: hydration_concurrency_design.md  pipeline_optimization_design.md  structure_improvement_plan.md  x_algorithm_bugfix_design.md
docs/plans/: 2026-01-27-filter-logging.md  2026-01-27-hydration-concurrency.md  2026-01-27-video-duplicate-prevention.md  2026-01-27-x-algorithm-comments-fix.md
docs/triage/: history_save_error.md  mediafilestorageerror.md  (+3 more)
tests/: conftest.py  test_smoke.py  verify_export.py  verify_gemini.py
triage/: veo_refactoring_plan.md
(+91 files in other folders)
