[project]
name = "genesis-ai"
version = "1.0.0"
description = "Blueguard Marketing AI Dashboard - SOLID Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=0.5.0",
    "google-cloud-storage>=2.10.0",
    "google-api-python-client>=2.100.0",
    "youtube-transcript-api>=0.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "notion-client>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis_ai"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "N", "W"]
lint.ignore = ["E501"]
exclude = [
    ".agent",
    ".idea",
    ".pytest_cache",
    ".ruff_cache",
    "outputs",
    "docs",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
no_implicit_optional = false
mypy_path = ["src"]
exclude = "(^tests/|^run.py$|^quality_gate.py$)"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src/genesis_ai -p no:cacheprovider"
